  are contains?, contains-with?, find, find*, find-with, and find-with*.
  See the documentation for details.

- The nreverse word has been removed.

- The , word no longer accepts a string as input. Formely, the following
  two lines were equivalent:
  
  [ "Hello" , " world" , ] make-string
  [ "Hello" % " world" % ] make-string
  
  Now, the former raises a type error.
  
- The stream-write, stream-write-attr, write and write-attr generic   
  words no longer accept a character as an argument. Use the new
  stream-write1 and write1 generic words to write single characters.

- reverse-slice ( seq -- seq ) outputs a new sequence that shares
  structure with the given sequence, but presents elements in reverse
  order.

- Many improvements to the matrices library.

- with-string word renamed to string-out ( quot -- string )

- new string-in ( string quot -- ) word, calls quot with stdio bound to
  a stream that reads from the given string.

- Improved inspector. Call it with inspect ( obj -- ).

- The number of generations used for garbage collection can now be set
  with the +G command line switch. You must specify at least 2
  generations.

- Only 2 generations are used by default now, since there seems to be no
  performance benefit to having 3 after running some brief benchmarks.

- Fixed bug where images saved from the jEdit plugin would fail to
  start.

- md5 hashing algorithm in contrib/crypto/ (Doug Coleman).

Factor 0.75:
------------

+ Runtime and core library

- Fix for a fatal bug where Factor was not functional on Mac OS X 10.4.

- Client sockets were not functional on Linux.

- New generational garbage collector. There are two command line
  switches for controlling it:

   +Yn   Size of 2 youngest generations, megabytes
   +An   Size of tenured and semi-spaces, megabytes

- Generic words can now dispatch on stack elements other than the top
  one; define your generic like this to dispatch on the second element:

   G: foo [ over ] [ type ] ;
