@@ -50,7 +50,7 @@ TUPLE: editor line caret ;
     ] with-editor ;
 
 : click-editor ( editor -- )
-    dup hand relative shape-x over set-caret-x request-focus ;
+    dup hand relative first over set-caret-x request-focus ;
 
 : editor-actions ( editor -- )
     [
@@ -81,7 +81,7 @@ C: editor ( text -- )
     0 0 3vector ;
 
 : caret-dim ( editor -- w h )
-    shape-dim { 0 1 1 } v* { 1 0 0 } v+ ;
+    rectangle-dim { 0 1 1 } v* { 1 0 0 } v+ ;
 
 M: editor user-input* ( ch editor -- ? )
     [ insert-char ] with-editor  t ;
@@ -91,7 +91,7 @@ M: editor pref-dim ( editor -- dim )
 
 M: editor layout* ( editor -- )
     dup editor-caret over caret-dim swap set-gadget-dim
-    dup editor-caret swap caret-loc swap set-shape-loc ;
+    dup editor-caret swap caret-loc swap set-rectangle-loc ;
 
 M: editor draw-gadget* ( editor -- )
     dup delegate draw-gadget*
