@@ -9,16 +9,14 @@ SYMBOL: y
 
 : origin ( -- loc ) x get y get 0 3vector ;
 
-GENERIC: inside? ( loc shape -- ? )
-GENERIC: shape-loc ( shape -- loc )
-GENERIC: set-shape-loc ( loc shape -- )
-GENERIC: shape-dim ( shape -- dim )
-GENERIC: set-shape-dim ( dim shape -- )
+TUPLE: rectangle loc dim ;
 
-: shape-x shape-loc first ;
-: shape-y shape-loc second ;
-: shape-w shape-dim first ;
-: shape-h shape-dim second ;
+GENERIC: inside? ( loc shape -- ? )
+
+: shape-x rectangle-loc first ;
+: shape-y rectangle-loc second ;
+: shape-w rectangle-dim first ;
+: shape-h rectangle-dim second ;
 
 : with-trans ( shape quot -- )
     #! All drawing done inside the quotation is translated
@@ -30,29 +28,11 @@ GENERIC: set-shape-dim ( dim shape -- )
         r> call
     ] with-scope ; inline
 
-: shape-pos ( shape -- pos )
-    dup shape-x swap shape-y rect> ;
-
 : shape-bounds ( shape -- loc dim )
-    dup shape-loc swap shape-dim ;
+    dup rectangle-loc swap rectangle-dim ;
 
 : shape-extent ( shape -- loc dim )
-    dup shape-loc dup rot shape-dim v+ ;
-
-: translate ( shape shape -- point )
-    #! Translate a point relative to the shape.
-    swap shape-loc swap shape-loc v- ;
-
-M: vector shape-loc ;
-M: vector shape-dim drop { 0 0 0 } ;
-
-TUPLE: rectangle loc dim ;
-
-M: rectangle shape-loc rectangle-loc ;
-M: rectangle set-shape-loc set-rectangle-loc ;
-
-M: rectangle shape-dim rectangle-dim ;
-M: rectangle set-shape-dim set-rectangle-dim ;
+    dup rectangle-loc dup rot rectangle-dim v+ ;
 
 : screen-bounds ( shape -- rect )
     shape-bounds >r origin v+ r> <rectangle> ;
