@@ -10,7 +10,7 @@ IN: shells
     #! dimensions.
     ttf-init
     ?init-world
-    world get shape-dim 2unseq 0 SDL_RESIZABLE [
+    world get rectangle-dim 2unseq 0 SDL_RESIZABLE [
         0 x set 0 y set [
             "Factor " version append dup SDL_WM_SetCaption
             start-world
